fix dropdowns are behind page-container

--- a/old-ui/app/css/page-container.css
+++ b/old-ui/app/css/page-container.css
@@ -2,7 +2,7 @@
   width: 100%;
   background-color: #fff;
   box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.08);
-  z-index: 25;
+/*  z-index: 25;*/
   display: flex;
   flex-flow: column;
   border-radius: 8px;
